--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gauthier-th/divia-api-v2": "^2.0.7",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.7",
+    "@react-native-picker/picker": "1.9.2",
+    "@react-navigation/native": "^5.9.3",
+    "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
     "expo-updates": "~0.4.0",
@@ -17,7 +24,9 @@
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-screens": "~2.15.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-ui-lib": "^5.21.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12"
   },
