--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
       "**/*"
     ],
     "splash": {
-      "image": "./assets/icon.png",
+      "image": "./assets/images/icon.png",
       "backgroundColor": "#2BA4AC"
     }
   },
@@ -17,7 +17,7 @@
     "package": "fr.gauthierthomas.sealvia",
     "versionCode": 1,
     "adaptiveIcon": {
-      "foregroundImage": "./assets/icon.png",
+      "foregroundImage": "./assets/images/icon.png",
       "backgroundColor": "#2BA4AC"
     }
   },
