--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-draggable-flatlist": "^2.5.4",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-get-random-values": "^1.6.0",
     "react-native-reanimated": "~1.13.0",
