--- a/ios/sealvia/Supporting/Expo.plist
+++ b/ios/sealvia/Supporting/Expo.plist
@@ -5,12 +5,14 @@
     <key>EXUpdatesSDKVersion</key>
     <string>40.0.0</string>
     <key>EXUpdatesURL</key>
-    <string>https://exp.host/@lordmorgoth/sealvia</string>
+    <string>https://exp.host/@gauthier-th/sealvia</string>
     <key>EXUpdatesEnabled</key>
     <true/>
     <key>EXUpdatesCheckOnLaunch</key>
     <string>ALWAYS</string>
     <key>EXUpdatesLaunchWaitMs</key>
     <integer>0</integer>
+    <key>EXUpdatesReleaseChannel</key>
+    <string>default</string>
   </dict>
 </plist>
